fix: resolve Paper API warnings and reload issues